# sdlc-automation

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DYNAFIT_IMPLEMENTATION_SPEC.md  Dockerfile  FRONTEND_BACKEND_SPEC.md  Makefile  README.md  TDD_IMPLEMENTATION_GUIDE.md  VSCODE_CLAUDE_CODE_SETUP.md  conftest.py  pyproject.toml
.claude/: phase1_ui_implementation.md  settings.json
.github/workflows/: ci.yml
agents/rag/: node.py  test_node.py
api/: main.py  models.py
api/middleware/: cors.py  logging.py
api/routes/: dynafit.py  knowledge_base.py
api/websocket/: progress.py
api/workers/: tasks.py
docs/: DECISIONS.md  DEVELOPMENT_RULES.md  DYNAFIT_Guardrails_Implementation.md  DYNAFIT_OpenSource_Library_Map.md  IMPLEMENTATION_CHECKLIST.md  INDEX.md  ISSUE_1_FIX_SUMMARY.md  PHASE2_ARCHITECTURE.md  PHASE5_COMPLETE_ALIGNMENT.md  PHASE5_UI_FIXES_SUMMARY.md  PHASE_ALIGNMENT_VERIFICATION.md  SDLC_Platform_Review_and_Optimization_Plan.md  TEST_REDUCTION_PLAN.md  UI_BACKEND_ALIGNMENT.md  UNIFIED_CHUNKING_REQUIREMENT.md  architecture.md  eager-growing-shannon.md  eager-stargazing-crane.md  investigation_step1_rag_bugs.md  layer3_delivery_plan.md  lessons.md  rules.md  session_context_S3_S6.md  session_report_2026-03-21.md  snoopy-floating-nygaard.md  warm-weaving-ripple.md
docs/components/api/: api_batches.md
docs/components/modules/: graph.md  phase1_ingestion.md  phase2_rag.md  phase3_matching.md  phase4_classification.md  phase5_validation.md
docs/components/platform/: config.md  guardrails.md  llm_client.md  observability.md  retrieval.md  schemas.md  storage.md
docs/guides/: PATTERNS.md  PHASE6_UI.md  SETUP.md
docs/reference/: DYNAFIT_BATCH_STATE.md  ERRORS.md  GLOSSARY.md  SCHEMAS.md
docs/sessions/: session_G_phase5_validation.md
docs/specs/: api.md  api_endpoints.md  api_schemas.md  dynafit.md  dynafit_phases.md  dynafit_schemas.md  guardrails.md  rules.md  tdd.md
infra/docker/: docker-compose.dev.yaml  docker-compose.services.yaml  docker-compose.ui-test.yaml  docker-compose.yaml  init-db.sql  prometheus.yml
infra/docker/migrations/: V0__base_schema.sql  V1__add_fitments_capability_ref.sql  V2__add_fitments_classification_fields.sql
infra/scripts/: download_models.py  migrate.py  seed_knowledge_base.py  smoke_test.py  split_knowledge_base.py  validate_contracts.py
knowledge_bases/d365_fo/: capabilities_lite.yaml  docs_corpus_lite.yaml  docs_lite.yaml  sample_requirements_20.txt
knowledge_bases/d365_fo/country_rules/: global.yaml
knowledge_bases/d365_fo/fdd_templates/: fit_template.j2
modules/: CLAUDE.md
modules/dynafit/: __init__.py  events.py  graph.py  guardrails.py  header_synonyms.yaml  manifest.yaml  presentation.py  product_config.py  state.py
modules/dynafit/nodes/: __init__.py  classification.py  ingestion.py  ingestion_atomiser.py  ingestion_column_mapper.py  ingestion_dedup.py  ingestion_quality.py  matching.py  phase5_validation.py  retrieval.py  rrf_fusion.py  validation.py  validation_output.py
modules/dynafit/prompts/: __init__.py  classification_v1.j2  loader.py  rationale_v1.j2
modules/dynafit/tests/: test_guardrails.py  test_phase1_column_mapper.py  test_phase3_pure.py
platform/: CLAUDE.md  __init__.py
platform/config/: settings.py
platform/guardrails/: __init__.py  file_validator.py  injection_scanner.py  pii_redactor.py  response_pii_scanner.py
platform/ingestion/: __init__.py  _config.py  _errors.py  artifact_store.py  chunker.py  converter.py  description.py  element_extractor.py  narration.py  schemas.py  unifier.py
platform/ingestion/templates/: image_description.j2  table_narration.j2
platform/llm/: client.py
platform/observability/: logger.py  metrics.py
platform/parsers/: docling_parser.py  format_detector.py
platform/retrieval/: bm25.py  embedder.py  knowledge_base.py  reranker.py  vector_store.py
platform/schemas/: __init__.py  base.py  errors.py  events.py  fitment.py  guardrails.py  product.py  requirement.py  retrieval.py
platform/storage/: postgres.py  redis_pub.py
platform/testing/: factories.py
scripts/: qdrant_query_demo.py  qdrant_seed_demo.py  qdrant_setup.py
tests/: conftest.py
tests/eval/: measure_rrf_improvement.py  validate_rrf_integration.py
tests/fixtures/: generate_fixture.py  generate_mixed_pdf.py  run_mixed_pdf_check.py  sample_d365_requirements.txt  sample_requirements.txt
tests/integration/: test_dynafit_graph.py  test_dynafit_phase8.py  test_ingestion.py  test_ingestion_journey.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_pii_guardrails.py  test_postgres.py  test_redis_pub.py  test_rrf_fusion.py  test_vector_store.py
tests/unit/: test_api_dynafit.py  test_api_workers.py  test_bm25.py  test_docling_parser.py  test_embedder.py  test_file_validator.py  test_format_detector.py  test_injection_scanner.py  test_knowledge_base_retriever.py  test_knowledge_base_routes.py  test_llm_client.py  test_logger.py  test_metrics.py  test_phase4_prompts.py  test_phase5_guardrails.py  test_reranker.py  test_scaffold.py  test_schemas.py  test_schemas_base.py  test_schemas_errors.py  test_schemas_events.py  test_schemas_fitment.py  test_schemas_product.py  test_schemas_requirement.py  test_schemas_retrieval.py  test_settings.py  test_validate_contracts.py
ui/: .dockerignore  Dockerfile  Dockerfile.test  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/api/: client.ts  dynafit.ts  knowledge_base.ts  types.ts  websocket.ts
ui/src/hooks/: useArtifacts.ts  useBatchJourney.ts  useBatches.ts  useCommandPalette.ts  useComparison.ts  useJourney.ts  useKeyboardShortcuts.ts  useKnowledgeBase.ts  useProgress.ts  useResults.ts  useReview.ts  useUpload.ts
ui/src/lib/: queryClient.ts  utils.ts
ui/src/pages/: AtomDetailPage.tsx  ComparePage.tsx  DashboardPage.tsx  FeatureDetailPage.tsx  KnowledgeBasePage.tsx  ProgressPage.tsx  ResultsPage.tsx  ReviewPage.tsx  SettingsPage.tsx  UploadPage.tsx
ui/src/stores/: uiStore.ts  (+2 more)
(+72 files in other folders)
