[project]
name = "enterprise-ai-platform"
version = "0.1.0"
description = "Enterprise AI agent platform for automating ERP implementation workflows"
requires-python = ">=3.12"
dependencies = [
    # Orchestration
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "langsmith>=0.1",

    # Schemas / validation
    "pydantic>=2.6",
    "pydantic-settings>=2.2",

    # Document parsing
    "docling>=2.0",
    "openpyxl>=3.1",
    "python-magic>=0.4",
    "unstructured[all-docs]>=0.13",

    # NLP
    "spacy>=3.7",
    "rapidfuzz>=3.6",

    # Translation (offline)
    "argostranslate>=1.9",

    # Vector / retrieval
    "qdrant-client>=1.8",
    "sentence-transformers>=3.0",
    "rank-bm25>=0.2",
    "faiss-cpu>=1.8",
    "datasketch>=1.6",

    # Storage
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "redis>=5.0",
    "psycopg2-binary>=2.9",

    # API / workers
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "celery[redis]>=5.3",
    "python-multipart>=0.0.9",

    # Observability
    "structlog>=24.1",
    "prometheus-client>=0.20",

    # Templating
    "jinja2>=3.1",

    # Utilities
    "click>=8.1",
    "httpx>=0.27",
    "networkx>=3.2",
    "numpy>=1.26",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-PyYAML>=6.0",
    "types-redis>=4.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["platforms", "agents", "modules", "api"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "modules/dynafit/tests"]
pythonpath = ["."]
markers = [
    "unit: fast, no external deps",
    "integration: needs Docker services",
    "golden: uses golden fixture files",
    "llm: needs live LLM (skip in CI)",
]
addopts = "--strict-markers"

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line-length enforced by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["platforms", "agents", "modules", "api"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = [
    "tests/",
    "infra/",
    "ui/",
    "knowledge_bases/",
    "docs/",
]

[[tool.mypy.overrides]]
module = [
    "qdrant_client.*",
    "sentence_transformers.*",
    "rank_bm25.*",
    "faiss.*",
    "datasketch.*",
    "docling.*",
    "unstructured.*",
    "magic.*",
    "spacy.*",
    "rapidfuzz.*",
    "argostranslate.*",
    "celery.*",
    "networkx.*",
    "langsmith.*",
    "langchain_anthropic.*",
    "langchain_core.*",
    "langgraph.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["platforms", "agents", "modules", "api"]
omit = ["*/tests/*", "*/testing/*"]

[tool.coverage.report]
show_missing = true
fail_under = 0  # raised per-layer as coverage grows
